# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: django.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels_list.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: label_confirm_delete.html  label_create.html  label_update.html  labels_list.html
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses_list.json
task_manager/statuses/migrations/: 0001_initial.py  0002_remove_status_description_remove_status_is_active_and_more.py  0003_alter_status_created_at.py
task_manager/tasks/: apps.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks_list.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_author_alter_task_executor.py  0003_alter_task_author_alter_task_executor_and_more.py  0004_alter_task_executor.py  0005_alter_task_executor.py  0006_alter_task_executor.py  0007_task_labels.py  0008_alter_task_labels.py  0009_alter_task_description.py
task_manager/templates/: base.html  index.html  login.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users_list.json
task_manager/users/migrations/: 0001_initial.py
(+14 files in other folders)
