[project]
name = "hexlet-code"
authors = [
    {name = "Dmitry Kabluchko", email = "xequrt@yandex.ru"},
]
version = "0.1.0"
description = "Hexlet project #4 - Task Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "ruff>=0.11.5",
    "whitenoise>=6.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]